--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "watch": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Cassidy Grom and Rachell",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
