--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "if-env": "^1.0.4",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "react-bootstrap": "^1.0.1"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
