--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^4.4.1",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
-    "react-bootstrap": "^1.0.1"
+    "react-bootstrap": "^1.0.1",
+    "react-router-dom": "^5.1.2",
+    "react-router-transition": "^2.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
